--- a/code/js/front-end/src/app/work-invite/work-invite.component.html
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.html
@@ -1,5 +1,9 @@
-
-
+<div class="header">
+  <button (click)="onBackCall()" class="small-button">
+    <mat-icon class="small-icon">arrow_back</mat-icon>
+  </button>
+  <h2 class="title">Introduza o Email e a Role das pessoas que pertende convidar</h2>
+</div>
 <div class="container">
   <div class="form-container">
     <mat-form-field>
