--- a/code/js/front-end/src/app/invite-details/invite-details.component.html
+++ b/code/js/front-end/src/app/invite-details/invite-details.component.html
@@ -8,8 +8,7 @@
         <h1 class="header-title">Participar na obra {{ invite?.workTitle }}?</h1>
       </mat-card-header>
       <mat-card-content>
-        <h2 class="invite-text">O administrador {{ invite?.admin }} convidou-te para participares nesta obra! </h2>
-        <h3 class="invite-text">Role: {{ invite?.role }}</h3>
+        <h2 class="invite-text">O administrador {{ invite?.admin }} convidou-te para participares nesta obra com o papel de {{ invite?.role }}!</h2>
       </mat-card-content>
       <mat-card-actions class="centered-actions">
         <button mat-raised-button class="action-button" color="primary" (click)="onAcceptCall()">Aceitar</button>
