--- a/code/js/front-end/src/app/list-users/list-users.component.css
+++ b/code/js/front-end/src/app/list-users/list-users.component.css
@@ -17,23 +17,11 @@
   font-size: 200%;
 }
 
-input[type="text"] {
+.search-input[type="text"] {
   border: solid 1px #000000;
   padding: 10px;
   border-radius: 8px;
   margin-right: 4px;
+  margin-left: 10px;
   width: 30%; /* Adjust the width of the input */
-}
-
-@media (max-width: 499px) {
-  input[type="text"], button {
-    width: 100%;
-    margin: 5px 0;
-  }
-}
-
-@media (min-width: 500px) and (max-width: 768px) {
-  input[type="text"] {
-    width: 70%;
-  }
 }
