--- a/code/js/front-end/src/app/create-work/create-work.component.html
+++ b/code/js/front-end/src/app/create-work/create-work.component.html
@@ -4,112 +4,191 @@
   </button>
   <h2 class="title">Criar Obra</h2>
 </div>
-<form (ngSubmit)="create()">
-  <div class="input">
-    <div>
-      <label for="name">Nome da Obra </label>
-    </div>
-    <div>
-      <input type="text" id="name" name="name" [(ngModel)]="work.name" required>
-    </div>
+<div class="content">
+  <div class="left-section">
+    <form (ngSubmit)="create()" class="example-form">
+      <div class="input-container">
+        <div class="input">
+          <label for="name" class="title">Nome da Obra</label>
+          <br>
+          <input type="text" id="name" name="name" [(ngModel)]="work.name" required>
+        </div>
+        <div class="input">
+          <div>
+            <label for="street" class="title">Tipo da Obra</label>
+            <br>
+            <select name="Type" [(ngModel)]="work.type">
+              <ng-container *ngFor="let type of types">
+                <option [value]="type">{{ type }}</option>
+              </ng-container>
+            </select>
+          </div>
+        </div>
+        <div class="input">
+          <label for="description" class="title">Descrição</label>
+          <br>
+          <input type="text" id="description" name="description" [(ngModel)]="work.description" required>
+        </div>
+        <div class="input">
+          <label for="holder" class="title">Titular da Licença</label>
+          <br>
+          <input type="text" id="holder" name="holder" [(ngModel)]="work.holder" required>
+        </div>
+        <div class="input">
+          <label for="company" class="title">Empresa</label>
+          <br>
+          <input style="margin-right: 3px" type="text" id="company" name="company" [(ngModel)]="work.company.name"
+                 placeholder="Nome" required>
+          <input type="text" id="companyNum" name="companyNum" [(ngModel)]="work.company.num"
+                 [ngModel]="work.company.num === 0? null : work.company.num"
+                 placeholder="Número" required>
+        </div>
+        <div class="input">
+          <label for="building" class="title">Prédio</label>
+          <br>
+          <input type="text" id="building" name="building" [(ngModel)]="work.building" required>
+        </div>
+        <div class="input">
+          <label for="street" class="title">Selecionar Distrito</label>
+          <br>
+          <select class="selector" name="district" [(ngModel)]="work.address.location.district">
+            <ng-container *ngFor="let distrito of districts">
+              <option [value]="distrito">{{ distrito }}</option>
+            </ng-container>
+          </select>
+        </div>
+        <div class="input">
+          <label for="street" class="title">Selecionar Concelho</label>
+          <br>
+          <select class="selector" name="county" [(ngModel)]="work.address.location.county"
+                  (change)="updateLocation(true)">
+            <ng-container *ngFor="let concelho of counties">
+              <option [value]="concelho">{{ concelho }}</option>
+            </ng-container>
+          </select>
+        </div>
+        <div class="input">
+          <label for="street" class="title">Selecionar Freguesia</label>
+          <br>
+          <select class="selector" name="Parish" [(ngModel)]="work.address.location.parish"
+                  (change)="updateLocation(false)">
+            <ng-container *ngFor="let freguesia of parishes">
+              <option [value]="freguesia">{{ freguesia }}</option>
+            </ng-container>
+          </select>
+        </div>
+        <div class="input">
+          <label for="street" class="title">Rua</label>
+          <br>
+          <input style="margin-right: 3px" type="text" id="street" name="street" [(ngModel)]="work.address.street"
+                 required>
+          <input type="text" id="zipCode" name="zipCode" [(ngModel)]="work.address.postalCode" required>
+        </div>
+        <div class="input">
+          <label for="nomeFiscal" class="title">Diretor</label>
+          <br>
+          <input style="margin-right: 3px" type="text" id="nomeDiretor" name="nomeFiscal" placeholder="Nome"
+                 [(ngModel)]="work.technicians[0].name"
+                 required>
+          <input style="margin-right: 3px" type="text" id="associacaoNomeDiretor" name="associacaoNomeDiretor"
+                 placeholder="Nome da Associação"
+                 [(ngModel)]="work.technicians[0].association.name" required>
+          <input type="text" id="associacaoNumDiretor" name="associacaoNumDiretor" placeholder="Número de Associado"
+                 [(ngModel)]="work.technicians[0].association.number"
+                 [ngModel]="work.technicians[0].association.number === 0? null : work.technicians[0].association.number"
+                 required>
+        </div>
+        <div class="input">
+          <label for="nomeFiscal" class="title">Responsável de Fiscalização</label>
+          <br>
+          <input style="margin-right: 3px" type="text" id="nomeFiscal" name="nomeFiscal" placeholder="Nome"
+                 [(ngModel)]="work.technicians[1].name"
+                 required>
+          <input style="margin-right: 3px" type="text" id="associacaoNomeFiscal" name="associacaoNomeFiscal"
+                 placeholder="Nome da Associação"
+                 [(ngModel)]="work.technicians[1].association.name" required>
+          <input type="text" id="associacaoNumFiscal" name="associacaoNumFiscal" placeholder="Número de Associado"
+                 [(ngModel)]="work.technicians[1].association.number"
+                 [ngModel]="work.technicians[1].association.number === 0? null : work.technicians[1].association.number"
+                 required>
+        </div>
+        <div class="input">
+          <label for="nomeCoord" class="title">Coordenador</label>
+          <br>
+          <input style="margin-right: 3px" type="text" id="nomeCoord" name="nomeCoord" placeholder="Nome"
+                 [(ngModel)]="work.technicians[2].name"
+                 required>
+          <input style="margin-right: 3px" type="text" id="associacaoNomeCoord" name="associacaoNomeCoord"
+                 placeholder="Nome da Associação"
+                 [(ngModel)]="work.technicians[2].association.name" required>
+          <input type="text" id="associacaoNumCoord" name="associacaoNumCoord" placeholder="Número de Associado"
+                 [(ngModel)]="work.technicians[2].association.number"
+                 [ngModel]="work.technicians[2].association.number === 0? null : work.technicians[2].association.number"
+                 required>
+        </div>
+        <button mat-flat-button color="accent" class="submit-button" type="submit">Criar</button>
+      </div>
+    </form>
   </div>
-  <div class="input">
-    <div>
-      <label>Tipo da Obra</label>
+  <div class="right-section">
+    <div class="input">
+      <h3 class="title">Adicionar Técnico</h3>
+      <br>
+      <input style="margin-right: 3px" type="text" id="addAuthName" name="addAuthName" placeholder="Nome"
+             [(ngModel)]="addTechName" required>
+      <input style="margin-right: 3px" type="text" id="addAuthNameAssociation" name="addAuthNameAssociation"
+             placeholder="Nome da Associação" [(ngModel)]="addTechAssociation" required>
+      <input type="text" id="addAuthAssociatedNum" name="addAuthAssociatedNum" placeholder="Número de Associado"
+             [(ngModel)]="addTechNumber"
+             [ngModel]="addTechNumber === 0? null : addTechNumber" required>
+      <mat-form-field>
+        <mat-label>Escolha um Papel</mat-label>
+        <mat-select [formControl]="roles" [errorStateMatcher]="matcher">
+          <mat-option value=""></mat-option>
+          <mat-option value="ARQUITETURA">Arquitetura</mat-option>
+          <mat-option value="ESTABILIDADE">Estabilidade</mat-option>
+          <mat-option value="ELETRICIDADE">Eletricidade</mat-option>
+          <mat-option value="GÁS">Gás</mat-option>
+          <mat-option value="CANALIZAÇÃO">Canalização</mat-option>
+          <mat-option value="TELECOMUNICAÇÕES">Telecomunicações</mat-option>
+          <mat-option value="TERMICO">Térmico</mat-option>
+          <mat-option value="ACUSTICO">Acústico</mat-option>
+          <mat-option value="TRANSPORTES">Transportes</mat-option>
+        </mat-select>
+        <mat-error *ngIf="roles.hasError('required')">
+          Escolher um papel é <strong>obrigatório</strong>
+        </mat-error>
+      </mat-form-field>
+      <button class="add-button" mat-fab (click)="addTechnician()">
+        <mat-icon>add</mat-icon>
+      </button>
     </div>
-    <div>
-      <select name="Type" [(ngModel)]="work.type">
-        <ng-container *ngFor="let type of types">
-          <option [value]="type">{{ type }}</option>
+    <div class="table-container">
+      <table *ngIf="work" mat-table [dataSource]="work.technicians" class="table">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Nome</th>
+          <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
         </ng-container>
-      </select>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label for="description">Descrição</label>
-    </div>
-    <div>
-      <input type="text" id="description" name="description" [(ngModel)]="work.description" required>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label for="holder">Titular da Licença</label>
-    </div>
-    <div>
-      <input type="text" id="holder" name="holder" [(ngModel)]="work.holder" required>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label for="director">Diretor</label>
-    </div>
-    <div>
-      <input type="text" id="director" name="director" [(ngModel)]="work.director" required>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label for="company">Empresa</label>
-    </div>
-    <div>
-      <input type="text" id="company" name="company" [(ngModel)]="work.company.name" required>
-      <input type="text" id="companyNum" name="companyNum" [(ngModel)]="work.company.num" required>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label for="building">Prédio</label>
-    </div>
-    <div>
-      <input type="text" id="building" name="building" [(ngModel)]="work.building" required>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label>Selecionar Distrito</label>
-    </div>
-    <div>
-      <select class="selector" name="district" [(ngModel)]="work.address.location.district">
-        <ng-container *ngFor="let distrito of districts">
-          <option [value]="distrito">{{ distrito }}</option>
+        <ng-container matColumnDef="role">
+          <th mat-header-cell *matHeaderCellDef> Papel</th>
+          <td mat-cell *matCellDef="let element"> {{ element.role }}</td>
         </ng-container>
-      </select>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label>Selecionar Concelho</label>
-    </div>
-    <div>
-      <select class="selector" name="county" [(ngModel)]="work.address.location.county" (change)="updateLocation(true)">
-        <ng-container *ngFor="let concelho of counties">
-          <option [value]="concelho">{{ concelho }}</option>
+        <ng-container matColumnDef="association">
+          <th mat-header-cell *matHeaderCellDef> Associação</th>
+          <td mat-cell *matCellDef="let element"> {{ element.association.name }} - {{ element.association.number }}</td>
         </ng-container>
-      </select>
-    </div>
-  </div>
-  <div class="input">
-    <div>
-      <label>Selecionar Freguesia</label>
-    </div>
-    <div>
-      <select class="selector" name="Parish" [(ngModel)]="work.address.location.parish" (change)="updateLocation(false)">
-        <ng-container *ngFor="let freguesia of parishes">
-          <option [value]="freguesia">{{ freguesia }}</option>
+        <ng-container matColumnDef="delete">
+          <th mat-header-cell *matHeaderCellDef> Remover</th>
+          <td mat-cell *matCellDef="let element">
+            <button *ngIf="element.role !== 'FISCALIZAÇÃO' && element.role !== 'COORDENADOR' && element.role !== 'DIRETOR'" class="remove-button"
+                    mat-fab (click)="onRemoveTechnician(element.role)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </td>
         </ng-container>
-      </select>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
     </div>
   </div>
-  <div class="input">
-    <div>
-      <label for="street">Rua</label>
-    </div>
-    <div>
-      <input type="text" id="street" name="street" [(ngModel)]="work.address.street" required>
-      <input type="text" id="zipCode" name="zipCode" [(ngModel)]="work.address.postalCode" required>
-    </div>
-  </div>
-  <button class="button" type="submit">Criar</button>
-</form>
+</div>
