--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -10,6 +10,7 @@
   height: 100%;
   background-color: #f5f5f5;
   border-right: 1px solid #ddd;
+  position: fixed;
 }
 
 .sidebar-header {
@@ -93,6 +94,7 @@
 
 .content {
   width: 85%;
+  margin-left: 15%;
 }
 
 .members-container {
@@ -177,6 +179,7 @@ form {
 
 .general-tab-content {
   margin-top: 5%;
+  height: 100%;
   display: flex;
   justify-content: center; /* Center horizontally */
   flex-direction: column;
@@ -194,7 +197,6 @@ form {
 
 .row {
   display: flex; /* make the row a flex container */
-  flex-wrap: wrap; /* allow the columns to wrap */
   justify-content: space-between; /* space the columns evenly */
 }
 
