Misc Edits and bugfixes

--- a/code/js/front-end/src/app/create-work/create-work.component.css
+++ b/code/js/front-end/src/app/create-work/create-work.component.css
@@ -139,3 +139,12 @@ input[type="text"], select {
 .title {
   margin: 5px;
 }
+
+.same-line-input-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.same-line-input-container .input {
+  flex: 1; /* Make the input take up the remaining space */
+}
