--- a/code/js/front-end/src/app/work-invite/work-invite.component.html
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.html
@@ -21,7 +21,7 @@
       <mat-label>Escolha um Papel</mat-label>
       <mat-select [formControl]="roles" [errorStateMatcher]="matcher">
         <mat-option value=""></mat-option>
-        <mat-option value="VIEWER">Espectador</mat-option>
+        <mat-option value="ESPECTADOR">Espectador</mat-option>
         <mat-option value="MEMBRO">Membro</mat-option>
         <mat-option value="FISCALIZAÇÃO">Fiscalização</mat-option>
         <mat-option value="COORDENADOR">Coordenador</mat-option>
