--- a/code/js/front-end/src/app/work-details/work-details.component.css
+++ b/code/js/front-end/src/app/work-details/work-details.component.css
@@ -28,9 +28,16 @@
 }
 
 .sidebar-content {
-  flex: 1;
+  height: 78%;
   padding: 10px;
 }
+
+.sidebar-footer {
+  margin: 10px;
+  background-color: #f5f5f5;
+  border-top: 1px solid #ddd;
+}
+
 
 .sidebar-menu {
   list-style: none;
@@ -42,7 +49,7 @@
   margin-bottom: 10px;
 }
 
-.sidebar-menu-link {
+.sidebar-menu-link, .sidebar-menu-link-selected {
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -50,6 +57,10 @@
   padding: 5px;
   border-radius: 5px;
   user-select: none;
+}
+
+.sidebar-menu-link-selected {
+  background-color: #ddd;
 }
 
 .sidebar-menu-link:hover {
@@ -189,7 +200,7 @@ form {
   width: 50%; /* adjust the width to your liking */
   margin: 20px ; /* center the container */
   padding: 20px;
-  background-color: #f9f9f9; /* light gray background */
+  background-color: transparent; /* light gray background */
   border: 1px solid #ddd; /* light gray border */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* subtle shadow */
 }
@@ -210,17 +221,17 @@ table {
 }
 
 th, td {
-  border: 1px solid #ddd; /* light gray border */
+  border: 1px solid transparent; /* light gray border */
   padding: 10px; /* add some padding to the cells */
   text-align: left; /* left-align the text */
 }
 
 th {
-  background-color: #f0f0f0; /* light gray background for headers */
+  background-color: transparent; /* light gray background for headers */
 }
 
 td {
-  background-color: #fff; /* white background for data cells */
+  background-color: transparent; /* white background for data cells */
 }
 
 strong {
@@ -231,7 +242,7 @@ strong {
   display: flex;
   align-items: center;
   padding: 10px;
-  background-color: #f5f5f5;
+  background-color: transparent;
   border-radius: 5px;
   border: 1px solid #FF7A00;
   margin: 5px;
@@ -273,4 +284,20 @@ strong {
 
 .hidden {
   display: none; /* Hide the element */
+}
+
+.finish-button {
+  width: 100%; /* Make the button full-width */
+  padding: 10px; /* Add some padding to the button */
+  font-size: 1.2em; /* Increase the font size of the button text */
+  font-weight: bold; /* Make the button text bold */
+  color: #fff; /* Set the button text color to white */
+  background-color: #FF7A00; /* Set the button background color to orange */
+  border: none; /* Remove the button border */
+  border-radius: 5px; /* Add a rounded corner to the button */
+  cursor: pointer; /* Change the cursor to a pointer on hover */
+}
+
+.finish-button:hover {
+  background-color: #FF9900; /* Change the button background color on hover */
 }
