--- a/code/js/front-end/src/app/work-listings/work-listings.component.html
+++ b/code/js/front-end/src/app/work-listings/work-listings.component.html
@@ -1,14 +1,21 @@
-<section class="listing">
-  <h2 class="listing-heading">{{ workListing.name }}</h2>
-  <p class="listing-type">Tipo: {{ workListing.type }}</p>
-  <p class="listing-state">Estado: {{ workListing.state }}</p>
-  <p class="listing-description">{{ workListing.description }}</p>
-  <section class="listing-location">
-    <img class="location-pin" src="/assets/location-pin.svg" alt="logo" aria-hidden="true">
-    <p>{{ workListing.address.location.district }}, {{ workListing.address.location.county }}
-      , {{ workListing.address.location.parish }}<br>{{ workListing.address.street }}
-      , {{ workListing.address.postalCode }}
-    </p>
-  </section>
-  <a [routerLink]="['/work-details', workListing.id]">Learn More</a>
-</section>
+<mat-card class="card">
+  <mat-card-header>
+    <mat-card-subtitle>Obra</mat-card-subtitle>
+    <mat-card-title>{{ workListing.name }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{ workListing.description }}</p>
+    <div style="display: flex; margin-bottom: 10px">
+      <mat-icon>location_pin</mat-icon>
+      <span>
+      {{ workListing.address.street }}, {{ workListing.address.postalCode }} | {{ workListing.address.location.parish }}
+        , {{ workListing.address.location.county }}, {{ workListing.address.location.district }}
+      </span>
+    </div>
+    <mat-divider></mat-divider>
+  </mat-card-content>
+  <mat-card-actions style="justify-content: center">
+    <button [routerLink]="['/work-details', workListing.id]">Ver</button>
+  </mat-card-actions>
+</mat-card>
+
